--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,124 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
+  font-family: sans-serif;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: column;
+  gap: 20px;
+  height: 100vh;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  background-color: #f8f9fd;
+}
+
+.item{
+  padding: 1px;
+  background-color: aquamarine;
+}
+.item2{
+  padding: 1px;
+  background-color:burlywood;
+}
+
+.float{
+  display:flex;
+  size:10px;
+  /* justify-content: space-between; */
+}
+
+.task-card{
+  /* border:1px slid; */
+  margin-bottom:10px;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* background-color: red; */
+}
+
+.refresh{
+  size: 20px;
+}
+
+.accordion-button{
+  color: white !important;
+  background-color: rgba(33,37,41,1) !important;
+}
+
+input[type="text"],
+input[type="password"] {
+  height: 30px;
+  border: 2px solid rgba(0, 0, 0, 0.2);
+}
+
+.black-button{
   color: white;
+  border: 1px solid white;
 }
 
-.App-link {
-  color: #61dafb;
+input[type="submit"] {
+  margin-top: 5px;
+  cursor: pointer;
+  font-size: 18px;
+  background: #01d28e;
+  border: 1px solid #01d28e;
+  color: #fff;
+  padding: 10px 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input[type="submit"]:hover {
+  background: #6cf0c2;
+}
+
+.button-refresh{
+  display: flex;
+  justify-content: right;
+  flex-direction: row;
+  margin: 1rem;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.button-container {
+  display:flex;
+  justify-content: center;
+  background-color: rgb(73, 73, 73);
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.login-form {
+  margin:1rem;
+  margin-left: 10rem;
+  margin-right: 10rem;
+  background-color: white;
+  padding: 5rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
+
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.list-container {
+  display: flex;
+}
+
+.error {
+  color: red;
+  font-size: 12px;
+}
+
+.title {
+  font-size: 25px;
+  margin-bottom: 20px;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin: 10px;
 }
